# ml_training_pipeline

./: .gitignore  README.txt  pyproject.toml
pipeline_pkg/: datos.py  decoradores.py  explorador.py  modelo.py  operaciones.py  pipeline.py
pipeline_pkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_datos.py  test_modelo.py  test_operaciones.py  test_pipeline.py
