[project]
name = "pipeline_pkg"
version = "0.1.0"
description = "Pipeline de entrenamiento ML con control de tiempos y persistencia de modelos"
authors = [
    { name = "HacheGe" }
]
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "skops"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]


# Para instalar en modo editable:
# pip install -e .